# pydantic-restate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-nix.yaml  ci.yaml
src/pydantic_restate/: __init__.py  config.py
